<resources>
    <string name="app_name">Matte app</string>
    <string name="start_game">Start</string>
    <string name="statistics">Statistikk</string>
    <string name="preferences">Preferanser</string>
    <string name="chooseAmout">Hvor mange spørsmål</string>
    <string name="main_bg_picutre_des">Bakgrunnsbilde</string>
    <string name="btn_game_0">0</string>
    <string name="btn_game_1">1</string>
    <string name="btn_game_2">2</string>
    <string name="btn_game_3">3</string>
    <string name="btn_game_4">4</string>
    <string name="btn_game_5">5</string>
    <string name="btn_game_6">6</string>
    <string name="btn_game_7">7</string>
    <string name="btn_game_8">8</string>
    <string name="btn_game_9">9</string>
    <string name="btn_game_submit">Sjekk!</string>
    <string name="btn_stats_reset">Nullstill!</string>
    <string name="txt_stats_title">Dine statistikker</string>
    <string name="question5">5 Spørsmål</string>
    <string name="question10">10 Spørsmål</string>
    <string name="question25">25 Spørsmål</string>
    <string name="chooseLanguage">Velg språk</string>
    <string name="norwegian">Norsk</string>
    <string name="german">Tysk</string>
    <string name="confirm">Bekreft</string>
    <string name="right">Riktige:</string>
    <string name="wrong">Feil:</string>
    <string name="exit">Lukk</string>
    <string name="remove">Fjern</string>
    <!--Disse strenger burde defineres av programmet, er definert kun for testing -->
    <string name="txt_question_test">23 + 42</string>
    <string name="txt_stats_test">Riktige: 20 Gale: 10</string>
    <string name="txt_stats_correct_test">20</string>
    <string name="txt_stats_wrong_test">10</string>
    <string name="sure_exit">Sikker på at du vil avlsutte spillet</string>
    <string name="accessiblity_input_number">Skriv inn tall</string>
    <string name="language_setting_group">Språk</string>
    <string name="question_amount_setting_group">Antall spørsmål</string>
    <string name="greating">Du klarte</string>
    <string name="of">av</string>

    <!-- Dette er bare til test -->


    <!--Dialoger-->
    <string name="ok">Avslutt spill</string>
    <string name="ikkeok">Avbryt</string>
    <string name="reset_title">Vil du nullstille statistikk?</string>
    <string name="reset_positive">Ja!</string>
    <string name="reset_negative">Nei!</string>


</resources>