<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/txt_right_awser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="15"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_wrong_awser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@xml/rounded_button_magenta"
        android:contentDescription="@string/exit"
        android:onClick="btnExitGame"
        android:padding="17dp"
        android:scaleType="fitCenter"
        android:shadowDx="3"
        android:shadowDy="3"
        android:src="@drawable/cross_white"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_game_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_question_test"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <EditText
        android:id="@+id/inp_newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_horizontal"
        android:hint="@string/accessiblity_input_number"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_game_1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_game_2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_game_2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_2"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_game_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <Button
        android:id="@+id/btn_game_3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_3"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_game_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />


    <Button
        android:id="@+id/btn_game_4"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_4"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_game_5"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_game_5"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_5"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_game_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <Button
        android:id="@+id/btn_game_6"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_6"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_game_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />


    <Button
        android:id="@+id/btn_game_7"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_7"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_game_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_game_8"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"

        android:layout_marginLeft="4dp"

        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_8"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_game_0"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <Button
        android:id="@+id/btn_game_9"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:text="@string/btn_game_9"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_game_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <ImageButton
        android:id="@+id/btn_remove"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_magenta"
        android:contentDescription="@string/remove"
        android:onClick="bntRemoveText"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:shadowDx="3"
        android:shadowDy="3"
        android:src="@drawable/delete_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_game_0"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@xml/rounded_button_blue"
        android:gravity="center_horizontal"
        android:text="@string/btn_game_0"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <ImageButton
        android:id="@+id/btn_game_submit"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="107dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:onClick="btnCheck"
        android:background="@xml/rounded_button_inchworm"
        android:contentDescription="@string/btn_game_submit"
        android:scaleType="fitCenter"
        android:shadowDx="3"
        android:shadowDy="3"
        android:padding="5dp"
        android:src="@drawable/check_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_game_0"
        app:layout_constraintTop_toTopOf="@+id/btn_game_0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66071427" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_game_question" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/txt_right_awser"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross" />


</androidx.constraintlayout.widget.ConstraintLayout>